--- a/maria.html
+++ b/maria.html
@@ -3,12 +3,12 @@
 <head>
 	<title>María :D</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="/php/amigos/estilos/maria.css">
+	<link rel="stylesheet" href="maria.css">
 
 
 
 </head>
-<body background="/php/imagenes/hange.jpg">
+<body background="hange.jpg">
 
 
 
@@ -20,7 +20,7 @@
 
 <div class="agrupar">
 
-<a href="/php/index.html">
+<a href="/php2/index.html">
 	<button>
 <h1 class="menu">Volver</h1>
 </button>
