--- a/canela.html
+++ b/canela.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Canelita :D</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="/php/amigos/estilos/canela.css">
+	<link rel="stylesheet" href="canela.css">
 
 
 
@@ -20,7 +20,7 @@
 
 <div class="agrupar">
 
-<a href="/php/index.html">
+<a href="index.html">
 	<button>
 <h1 class="menu">Volver</h1>
 </button>
